# iot

./: CMakeLists.txt  Makefile
.cache/clangd/index/: camera.cpp.3A16AC881A4C9901.idx  coder.cpp.7C827A80F8BBF442.idx  coder.h.3B60C4034F8E265F.idx  data.cpp.FF3085D376ACAF22.idx  json_parser.cpp.1CE44FBFA6BF8F9F.idx  json_parser.h.54BBD5DAEB38898A.idx  main.cpp.CC3660FE7EE08B99.idx  receive.cpp.28FBD53E34311989.idx  send.cpp.57B0FFBDBD6D55C3.idx  status.h.62CD66191E1C935B.idx  transfer.cpp.8F99A1C7A62D7782.idx  update.cpp.A2A9F9827940275D.idx
src/Inc/: coder.h  json_parser.h  status.h
src/Src/: camera.cpp  coder.cpp  data.cpp  json_parser.cpp  main.cpp  receive.cpp  send.cpp  transfer.cpp  update.cpp
test/: test_camera.cpp  test_code.cpp
